fixing overlapping text-area trying padding

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -191,7 +191,7 @@ form label {
     text-transform: uppercase;
 }
  .calculator-form {
-     padding: 10px;
+     padding-top: 10px;
     width: 100%;
     height: auto;
      border: 2px solid #444444;
@@ -487,6 +487,7 @@ h2 {
     /*align-items: center;*/
     justify-content: center;
     align-content: center;
+    padding: 10px 15px;
 }
 @media (max-width: 768px) {
     .sides {
